# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-04-21  Christian Heller  <christian.heller@tuxtax.de>

        * Add files "item_comparator.c" and "model_comparator.c"

2011-04-19  Christian Heller  <christian.heller@tuxtax.de>

        * Correct new "shell_output" cybol example applications for "sequence", "branch" and "loop"

2011-04-18  Christian Heller  <christian.heller@tuxtax.de>

        * Add "sequence" control flow operation in parallel to "loop" and "branch"
        * Fix shell output error in "file_sender.c" (when sending byte streams to "stdout",
            the output has to be done in "wchar_t" anyway, since "stdout" was configured
            for wide characters at cyboi startup; therefore, use fwprintf in this case)
        * Add new "shell_output" cybol example applications for "sequence", "branch" and "loop"

2011-04-16  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new container functions "setter"

2011-04-15  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new container functions
        * Adapt "setter" modules according to CYBOP knowledge schema:
            merge "compound" and "part" into "model"; rename "model" into "item"

2011-04-14  Christian Heller  <christian.heller@tuxtax.de>

        * Redesign container functions

2011-04-13  Christian Heller  <christian.heller@tuxtax.de>

        * Redesign container functions

2011-04-05  Christian Heller  <christian.heller@tuxtax.de>

        * Experiment with allocation- and other container functions

2011-04-01  Christian Heller  <christian.heller@tuxtax.de>

        * Implement and investigate fraction operations
